docs/tests/typing/bad/testfile-while-2.cpp

class S { public: int a; };
int main() { S s; while(s); }

